# sentinel-platform

./: .gitignore  Dockerfile  README.md  kind-config.yaml  pyproject.toml
aws/: s3-policy.json
docker/mlflow/: Dockerfile
docker/ray/: Dockerfile  Dockerfile.serve  Dockerfile.train  Dockerfile.tune
docs/: architecture.md  k8s_troubleshoot.md  mlflow.md  recommend.md
eks/: cluster.yaml
jobs/train/: train_dummy.py  train_recommend.py
jobs/tune/: tune_recommend.py
k8s/: cluster-autoscaler.yaml  mlflow-minio.yaml  mlflow-platform.yaml  ray-cluster-train.yaml  ray-cluster-tune.yaml  ray-cluster.yaml  ray-monitor.yaml  ray-recommend-serve.yaml  ray-service.yaml  recommend-train-job.yaml  recommend-tune-job.yaml  sentinel-train-job.yaml
k8s/ray/: ray-cluster-train.yaml  ray-factcheck-serve.yaml  ray-monitor.yaml  ray-recommend-serve.yaml
ray-dashboards/: default_grafana_dashboard.json  serve_deployment_grafana_dashboard.json  serve_grafana_dashboard.json
serve/: main.py  recommend.py
terraform/: README.md  eks.tf  iam.tf  outputs.tf  provider.tf  s3.tf  variables.tf
tests/: stress.py
train/: lightning.py  train_job.py  training_with_lightning.py
tune/: tune_recommend.py
