[project]
name = "sentinel-platform"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = ["ray[default] (>=2.53.0,<3.0.0)", "numpy (==1.26.4)", "transformers (>=4.57.3,<5.0.0)", "datasets (>=4.4.2,<5.0.0)", "evaluate (>=0.4.6,<0.5.0)", "fastapi (>=0.128.0,<0.129.0)", "torch (==2.9.1)"]

[tool.poetry]
# This tells Poetry 2.0: "Just install dependencies, don't build this project as a package"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
